tests/fixtures/positive/naming/MemberNameEqualsClassName.kt
package com.example.naming

class Foo {
    val Foo = 1
    fun Foo() {}
}

class Bar {
    val Bar = "collision"
}
