tests/fixtures/negative/naming/MemberNameEqualsClassName.kt
package com.example.naming

class Foo {
    val bar = 1
    fun baz() {}
}

class Bar {
    val something = "no collision"
}
